refactor(test): align JSON naming ArchUnit guard with conventions
- Rename the test class to JsonNamingConventionTests to follow the *Tests suffix convention
- Rename the ArchCondition to haveJsonNameMatchingFieldName and reword its description by intent
- Report the violating field via getFullName() per ArchUnit's message convention
- Document ArchUnit fitness-function placement in .claude/rules/architecture.md